# hyprconnect

./: .gitignore  Cargo.toml  README.md
crates/hyprconnect-core/: Cargo.toml
crates/hyprconnect-core/src/: lib.rs
crates/hyprconnectctl/: Cargo.toml
crates/hyprconnectctl/src/: main.rs
crates/hyprconnectd/: Cargo.toml
crates/hyprconnectd/src/: main.rs
examples/: config.toml
examples/systemd/: hyprconnectd.service
