[workspace]
members = [
  "crates/hyprconnect-core",
  "crates/hyprconnectd",
  "crates/hyprconnectctl",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
futures-util = "0.3"
notify-rust = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
zbus = "5"
