[package]
name = "hyprconnectctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true

hyprconnect-core = { path = "../hyprconnect-core" }
