[package]
name = "hyprconnectd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true
notify-rust.workspace = true
regex.workspace = true
serde_json.workspace = true
tokio.workspace = true
zbus.workspace = true

hyprconnect-core = { path = "../hyprconnect-core" }
